gcc-14.2.0/gcc/testsuite/gdc.test/compilable/inliner2.d
version https://git-lfs.github.com/spec/v1
oid sha256:e22a49616626f32854469f968de925080837aade951f373c409ba9cc570bdd26
size 403
